<resources>
    <string name="app_name">AssignmentSampletwo</string>
    <string name="log_in_to_your_account">Log in to your account</string>
    <string name="phone_number">Phone Number</string>
    <string name="_09">09</string>
    <string name="Ph">|</string>
    <string name="log_in">LOG IN</string>
    <string name="or_connect_with">Or connect with</string>
    <string name="facebook">Facebook</string>
    <string name="gmail">Gmail</string>
    <string name="password">Password</string>
    <string name="todo">TODO</string>
    <string name="create_new_account">create new account</string>
    <string name="forget_password">forget password?</string>
</resources>